[nrf noup] ci: Add Jenkins-based CI for zephyr
This patch is a squash containing the Jenkins-based NCS CI patches for
Zephyr thus far.

It takes over .github from the upstream maintainers for the purposes
of NCS, adds a Jenkinsfile, and adjusts the backport target.

Signed-off-by: Thomas Stilwell <Thomas.Stilwell@nordicsemi.no>
Signed-off-by: Ulrich Myhre <ulrich.solli.myhre@nordicsemi.no>
Signed-off-by: Martí Bolívar <marti.bolivar@nordicsemi.no>
Signed-off-by: Torsten Rasmussen <Torsten.Rasmussen@nordicsemi.no>
Signed-off-by: Emil Obalski <emil.obalski@nordicsemi.no>
(cherry picked from commit 23df4b66d44ecc20974598c41bb095995e12def0)
(cherry picked from commit 1a64079c8fe3c0b42f5888abe0d774ec2cb74fba)
(cherry picked from commit 324b6fbb139a69a366ae0f884bda589c9e8e4ffa)

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -14,8 +14,7 @@
 # *                                        @galak @nashif
 
 /.known-issues/                           @nashif
-/.github/				  @nashif
-/.github/workflows/                       @galak @nashif
+/.github/                                 @thst-nordic
 /.buildkite/				  @galak
 /MAINTAINERS.yml                          @ioannisg @MaureenHelm
 /arch/arc/                                @abrodkin @ruuddw
@@ -451,6 +450,7 @@
 /include/toolchain.h                      @andrewboie @andyross @nashif
 /include/toolchain/                       @andrewboie @andyross
 /include/zephyr.h                         @andrewboie @andyross
+/Jenkinsfile                              @thst-nordic
 /kernel/                                  @andrewboie @andyross
 /lib/fnmatch/                             @carlescufi
 /lib/gui/                                 @vanwinkeljan
