--- a/boards/arm/frdm_k64f/frdm_k64f.dts
+++ b/boards/arm/frdm_k64f/frdm_k64f.dts
@@ -149,6 +149,8 @@ arduino_spi: &spi0 {
 &uart0 {
 	status = "okay";
 	current-speed = <115200>;
+	pinctrl-0 = <&uart0_rx_ptb16 &uart0_tx_ptb17>;
+	pinctrl-names = "default";
 };
 
 &usbotg {
