device: Introduce a generic context synchronization mechanism
This adds a synchronization semaphore to generalize call synchronization
among all device drivers. This will permit to avoid for drivers
maintainers to implement their own solution.

Signed-off-by: Tomasz Bursztyka <tomasz.bursztyka@linux.intel.com>

--- a/dts/bindings/base/zephyr,device.yaml
+++ b/dts/bindings/base/zephyr,device.yaml
@@ -7,3 +7,11 @@ properties:
         description: |
             Unset by default, it enables the possibility to avoid allocating a lock
             on the device instance.
+
+    zephyr,no-sync:
+        type: boolean
+        required: false
+        description: |
+            Unset by default, it enables the possibility to avoid allocating
+            a synchronization object on the device instance. This can be useful if
+            the device driver works on polling mode only.
