soc: arm: k6x: Added power management module to the k6x soc
Sleep 1 utilises the kinetis wait mode to save power.
clock changes during power module operation.
Use the extern int value to set the actual clock freq.

Signed-off-by: Nicolai Glud <nicolai.glud@prevas.dk>

--- a/dts/arm/nxp/nxp_k6x.dtsi
+++ b/dts/arm/nxp/nxp_k6x.dtsi
@@ -25,7 +25,15 @@
 			device_type = "cpu";
 			compatible = "arm,cortex-m4f";
 			reg = <0>;
+			cpu-power-states = <&state0>;
 		};
+
+		state0: state0 {
+			compatible = "zephyr,power-state";
+			power-state-name = "suspend-to-idle";
+			min-residency-us = <1>;
+		};
+
 	};
 
 	/* The on-chip SRAM is split into SRAM_L and SRAM_U regions that form a
