samples: subsys: mgmt: smp_svr: Possible download log file from flash FS
Added ability to downlaod log file from flash with LittleFS
using mcumgr.

Signed-off-by: Mateusz Syc <Mateusz.Syc@nordicsemi.no>

--- a/samples/subsys/mgmt/mcumgr/smp_svr/prj.conf
+++ b/samples/subsys/mgmt/mcumgr/smp_svr/prj.conf
@@ -21,7 +21,16 @@ CONFIG_STATS_NAMES=y
 CONFIG_MCUMGR_CMD_IMG_MGMT=y
 CONFIG_MCUMGR_CMD_OS_MGMT=y
 CONFIG_MCUMGR_CMD_STAT_MGMT=y
+CONFIG_MCUMGR_CMD_FS_MGMT=y
 
 # Enable logging
 CONFIG_LOG=y
 CONFIG_MCUBOOT_UTIL_LOG_LEVEL_WRN=y
+
+# Enable littlefs for fs backend.
+CONFIG_FLASH_MAP=y
+CONFIG_FILE_SYSTEM=y
+CONFIG_FILE_SYSTEM_LITTLEFS=y
+
+# Enable logger file system backend.
+CONFIG_LOG_BACKEND_FS=y
