boards: nucleo_f746zg: add support for can2
Add can2 support to the nucleo f746zg board.

Signed-off-by: Alexander Wachter <alexander@wachter.cloud>

--- a/boards/arm/nucleo_f746zg/nucleo_f746zg.dts
+++ b/boards/arm/nucleo_f746zg/nucleo_f746zg.dts
@@ -26,7 +26,7 @@
 		zephyr,sram = &sram0;
 		zephyr,flash = &flash0;
 		zephyr,dtcm = &dtcm;
-		zephyr,can-primary = &can1;
+		zephyr,can-primary = &can2;
 	};
 
 	leds {
@@ -124,6 +124,15 @@
 };
 
 &dma2 {
+	status = "okay";
+};
+
+&can2 {
+	bus-speed = <125000>;
+	sjw = <1>;
+	prop-seg = <0>;
+	phase-seg1 = <6>;
+	phase-seg2 = <5>;
 	status = "okay";
 };
 
