nrf5x_bsim: Add the board nrf53_cpunet_bsim
The board models the nrf53840 cpunet.

Signed-off-by: Aurora Sletnes Bjørlo <aurora.sletnes@nordicsemi.no>

--- a/soc/Kconfig
+++ b/soc/Kconfig
@@ -30,6 +30,12 @@ config SOC_COMPATIBLE_NRF52X
 config SOC_COMPATIBLE_NRF52832
 	bool
 
+config SOC_COMPATIBLE_NRF53X_CPUNET
+	bool
+
+config SOC_COMPATIBLE_NRF5340_CPUNET
+	bool
+
 #
 # SOC_*_LD: SoC specific Linker script additions
 #
