--- a/samples/subsys/usb/mass/Kconfig
+++ b/samples/subsys/usb/mass/Kconfig
@@ -37,6 +37,12 @@ config APP_MSC_STORAGE_FLASH_LITTLEFS
 	imply FILE_SYSTEM
 	imply FILE_SYSTEM_LITTLEFS
 
+config APP_MSC_STORAGE_SDCARD
+	bool "Use SDHC and FAT file system"
+	imply DISK_ACCESS_SDHC
+	imply FILE_SYSTEM
+	imply FAT_FILESYSTEM_ELM
+
 endchoice
 
 config DISK_RAM_VOLUME_SIZE
@@ -45,6 +51,21 @@ config DISK_RAM_VOLUME_SIZE
 config MASS_STORAGE_DISK_NAME
 	default "NAND" if DISK_ACCESS_FLASH
 	default "RAM" if DISK_ACCESS_RAM
+	default "SD" if DISK_ACCESS_SDHC
+
+if DISK_ACCESS_SDHC
+
+if !DISK_ACCESS_USDHC
+
+config SPI
+	default y
+
+config DISK_ACCESS_SPI_SDHC
+	default y
+
+endif #!DISK_ACCESS_USDHC
+
+endif #DISK_ACCESS_SDHC
 
 if DISK_ACCESS_FLASH
 
