--- a/dts/arm/st/h7/stm32h7.dtsi
+++ b/dts/arm/st/h7/stm32h7.dtsi
@@ -726,6 +726,24 @@
 				status = "disabled";
 			};
 		};
+
+		sdmmc1: sdmmc@52007000 {
+			compatible = "st,stm32-sdmmc";
+			reg = <0x52007000 0x400>;
+			interrupts = <49 0>;
+			clocks = <&rcc STM32_CLOCK_BUS_AHB3 0x10000>;
+			label = "SDMMC_1";
+			status = "disabled";
+		};
+
+		sdmmc2: sdmmc@48022400 {
+			compatible = "st,stm32-sdmmc";
+			reg = <0x48022400 0x400>;
+			interrupts = <124 0>;
+			clocks = <&rcc STM32_CLOCK_BUS_AHB2 0x200>;
+			label = "SDMMC_2";
+			status = "disabled";
+		};
 	};
 };
 
