--- a/dts/bindings/mmc/st,stm32-sdmmc.yaml
+++ b/dts/bindings/mmc/st,stm32-sdmmc.yaml
@@ -14,6 +14,9 @@ properties:
     reg:
         required: true
 
+    interrupts:
+      required: true
+
     cd-gpios:
         type: phandle-array
         required: false
