arch: add symbols for common linking functionality
Add two symbols for future use in linking in `.text` and `.rodata`
sections using the snippet framework.

Signed-off-by: Jordan Yates <jordan.yates@data61.csiro.au>

--- a/arch/Kconfig
+++ b/arch/Kconfig
@@ -461,6 +461,12 @@ config ARCH_HAS_EXTRA_EXCEPTION_INFO
 config ARCH_HAS_GDBSTUB
 	bool
 
+config ARCH_USE_CORE_SNIPPETS
+	bool
+
+config ARCH_USE_GNU_LINKONCE
+	bool
+
 config ARCH_HAS_COHERENCE
 	bool
 	help
