arch: add common section snippets
Add a common snippet for including the `.rodata` and `.text` linker
sections into the `RODATA` and `TEXT` section snippets.

`core` is chosen as the sort prefix to preserve the existing ordering of
the `RODATA` snippet (snippets are placed after the `.rodata` section).

The `5` postfix is used to allow individual arch's to place other linker
code directly around the common snippet.

Implements #29604

Signed-off-by: Jordan Yates <jordan.yates@data61.csiro.au>

--- a/arch/common/CMakeLists.txt
+++ b/arch/common/CMakeLists.txt
@@ -34,6 +34,18 @@ zephyr_linker_sources_ifdef(CONFIG_NOCACHE_MEMORY
   nocache.ld
 )
 
+zephyr_linker_sources_ifdef(CONFIG_ARCH_USE_CORE_SNIPPETS
+  RODATA
+  SORT_KEY core5
+  core_rodata.ld
+)
+
+zephyr_linker_sources_ifdef(CONFIG_ARCH_USE_CORE_SNIPPETS
+  TEXT
+  SORT_KEY core5
+  core_text.ld
+)
+
 # Only ARM, X86 and OPENISA_RV32M1_RISCV32 use ROM_START_OFFSET.
 if (DEFINED CONFIG_ARM OR DEFINED CONFIG_X86
     OR DEFINED CONFIG_SOC_OPENISA_RV32M1_RISCV32)
