--- a/arch/Kconfig
+++ b/arch/Kconfig
@@ -22,6 +22,8 @@ config ARC
 	select HAS_DTS
 	imply XIP
 	select ARCH_HAS_THREAD_LOCAL_STORAGE
+	select ARCH_USE_CORE_SNIPPETS
+	select ARCH_USE_GNU_LINKONCE
 	help
 	  ARC architecture
 
