arch: arm: convert linker to common snippets
Convert the linker sections relating to `.text` and `.rodata` to use the
common snippets. This enables applications to implement custom ordering
of the output binaries by injecting linker code into the relevant
snippet.

Signed-off-by: Jordan Yates <jordan.yates@data61.csiro.au>

--- a/arch/Kconfig
+++ b/arch/Kconfig
@@ -36,6 +36,8 @@ config ARM
 	# is really only necessary for Cortex-M with ARM MPU!
 	select GEN_PRIV_STACKS
 	select ARCH_HAS_THREAD_LOCAL_STORAGE if ARM64 || CPU_CORTEX_R || CPU_CORTEX_M
+	select ARCH_USE_CORE_SNIPPETS
+	select ARCH_USE_GNU_LINKONCE
 	help
 	  ARM architecture
 
