arch: nios2: convert linker to common snippets
Convert the linker sections relating to `.text` and `.rodata` to use the
common snippets. This enables applications to implement custom ordering
of the output binaries by injecting linker code into the relevant
snippet.

Signed-off-by: Jordan Yates <jordan.yates@data61.csiro.au>

--- a/arch/Kconfig
+++ b/arch/Kconfig
@@ -76,6 +76,8 @@ config NIOS2
 	select HAS_DTS
 	imply XIP
 	select ARCH_HAS_TIMING_FUNCTIONS
+	select ARCH_USE_CORE_SNIPPETS
+	select ARCH_USE_GNU_LINKONCE
 	help
 	  Nios II Gen 2 architecture
 
