arch: riscv: convert linker to common snippets
Convert the linker sections relating to `.text` and `.rodata` to use the
common snippets. This enables applications to implement custom ordering
of the output binaries by injecting linker code into the relevant
snippet.

Signed-off-by: Jordan Yates <jordan.yates@data61.csiro.au>

--- a/arch/riscv/core/CMakeLists.txt
+++ b/arch/riscv/core/CMakeLists.txt
@@ -19,3 +19,6 @@ zephyr_library_sources(
 zephyr_library_sources_ifdef(CONFIG_IRQ_OFFLOAD irq_offload.c)
 zephyr_library_sources_ifdef(CONFIG_THREAD_LOCAL_STORAGE tls.c)
 zephyr_library_sources_ifdef(CONFIG_USERSPACE userspace.S)
+
+zephyr_linker_sources(RODATA SORT_KEY core4 srodata.ld)
+zephyr_linker_sources(RODATA SORT_KEY core6 sdata.ld)
