--- a/arch/Kconfig
+++ b/arch/Kconfig
@@ -86,6 +86,8 @@ config RISCV
 	select ARCH_IS_SET
 	select HAS_DTS
 	select ARCH_HAS_THREAD_LOCAL_STORAGE
+	select ARCH_USE_CORE_SNIPPETS
+	select ARCH_USE_GNU_LINKONCE
 	imply XIP
 	help
 	  RISCV architecture
