arch: sparc: convert linker to common snippets
Convert the linker sections relating to `.text` and `.rodata` to use the
common snippets. This enables applications to implement custom ordering
of the output binaries by injecting linker code into the relevant
snippet.

Signed-off-by: Jordan Yates <jordan.yates@data61.csiro.au>

--- a/arch/sparc/core/CMakeLists.txt
+++ b/arch/sparc/core/CMakeLists.txt
@@ -18,3 +18,7 @@ zephyr_library_sources(
 
 zephyr_library_sources_ifdef(CONFIG_IRQ_OFFLOAD irq_offload.c)
 zephyr_library_sources_ifdef(CONFIG_THREAD_LOCAL_STORAGE tls.c)
+
+zephyr_linker_sources(TEXT SORT_KEY core4 traptable.ld)
+
+zephyr_linker_sources(RODATA SORT_KEY core6 rodata1.ld)
