--- a/arch/Kconfig
+++ b/arch/Kconfig
@@ -50,6 +50,8 @@ config SPARC
 	select ATOMIC_OPERATIONS_BUILTIN if SPARC_CASA
 	select ATOMIC_OPERATIONS_C if !SPARC_CASA
 	select ARCH_HAS_THREAD_LOCAL_STORAGE
+	select ARCH_USE_CORE_SNIPPETS
+	select ARCH_USE_GNU_LINKONCE
 	help
 	  SPARC architecture
 
