--- a/arch/Kconfig
+++ b/arch/Kconfig
@@ -68,6 +68,8 @@ config X86
 	select ARCH_HAS_TIMING_FUNCTIONS
 	select ARCH_HAS_THREAD_LOCAL_STORAGE
 	select ARCH_HAS_DEMAND_PAGING
+	select ARCH_USE_CORE_SNIPPETS
+	select ARCH_USE_GNU_LINKONCE if !X86_64
 	help
 	  x86 architecture
 
