--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -10,3 +10,4 @@ add_subdirectory(gui)
 add_subdirectory(os)
 add_subdirectory(util)
 add_subdirectory_ifdef(CONFIG_OPENAMP              open-amp)
+add_subdirectory(auth)
