--- a/boards/riscv/genesys2/genesys2_defconfig
+++ b/boards/riscv/genesys2/genesys2_defconfig
@@ -1,10 +1,9 @@
 CONFIG_BOARD_GENESYS2=y
 CONFIG_SOC_RISCV64_ARIANE=y
 CONFIG_SOC_SERIES_RISCV64_ARIANE=y
-#CONFIG_PLIC=y
-#CONFIG_GPIO=y
+CONFIG_PLIC=y
+CONFIG_GPIO=y
 CONFIG_GPIO_XLNX_AXI=y
-#CONFIG_LED=y
 CONFIG_PINMUX=y
 CONFIG_SERIAL=y
 CONFIG_CONSOLE=y
