auth: Requiring use of cryptographically secure rand generator.
- Updated code to use sys_csrand_get().
- Updated docs to indicate secure random generator is required.
- Added explicit doc note warning the Challenge-Response
  auth method does not encrypt subsequent messages of the link.
- Also fixed varous formatting errors.

Signed-off-by: Dean Gereaux <deang@goldenbits.com>

--- a/samples/authentication/bluetooth/central_auth/prj.conf
+++ b/samples/authentication/bluetooth/central_auth/prj.conf
@@ -28,6 +28,10 @@ CONFIG_TINYCRYPT=y
 CONFIG_TINYCRYPT_SHA256=y
 CONFIG_AUTH_CHALLENGE_RESPONSE=y
 
+#  The SOC must have a hardware based random number generator.
+CONFIG_ENTROPY_GENERATOR=y
+CONFIG_ENTROPY_DEVICE_RANDOM_GENERATOR=y
+
 # logging
 CONFIG_LOG=y
 CONFIG_AUTH_LOG_LEVEL=0
