--- a/samples/authentication/bluetooth/peripheral_auth/dtls.prj.conf
+++ b/samples/authentication/bluetooth/peripheral_auth/dtls.prj.conf
@@ -30,8 +30,8 @@ CONFIG_LOG_BACKEND_RTT=y
 CONFIG_LOG_BACKEND_UART=n
 CONFIG_LOG_PRINTK=y
 
-# The assumes the board has a hardware based random
-# number generator.
+#  The SOC must have a hardware based random number generator.
+CONFIG_ENTROPY_GENERATOR=y
 CONFIG_ENTROPY_DEVICE_RANDOM_GENERATOR=y
 
 # Mbed config'CONFIG_MBEDTLS=y
