--- a/samples/authentication/serial/auth_server/prj.conf
+++ b/samples/authentication/serial/auth_server/prj.conf
@@ -14,9 +14,9 @@ CONFIG_TINYCRYPT=y
 CONFIG_TINYCRYPT_SHA256=y
 CONFIG_UART_INTERRUPT_DRIVEN=y
 
-# For production products, should use a real hardware
-# random number generator.
-CONFIG_TEST_RANDOM_GENERATOR=y
+# The SOC must have a hardware based random number generator.
+CONFIG_ENTROPY_GENERATOR=y
+CONFIG_ENTROPY_DEVICE_RANDOM_GENERATOR=y
 
 # Don't use UART backend for logging, will collide with serial link
 CONFIG_LOG=y
