--- a/samples/authentication/bluetooth/peripheral_auth/prj.conf
+++ b/samples/authentication/bluetooth/peripheral_auth/prj.conf
@@ -26,6 +26,10 @@ CONFIG_LOG=y
 CONFIG_AUTH_LOG_LEVEL=3
 CONFIG_AUTH_CHALLENGE_RESPONSE=y
 
+#  The SOC must have a hardware based random number generator.
+CONFIG_ENTROPY_GENERATOR=y
+CONFIG_ENTROPY_DEVICE_RANDOM_GENERATOR=y
+
 # logging
 CONFIG_LOG=y
 CONFIG_USE_SEGGER_RTT=y
