--- a/samples/authentication/multi_instance/auth_client/prj.conf
+++ b/samples/authentication/multi_instance/auth_client/prj.conf
@@ -53,6 +53,9 @@ CONFIG_TINYCRYPT=y
 CONFIG_TINYCRYPT_SHA256=y
 CONFIG_UART_INTERRUPT_DRIVEN=y
 
+# The SOC must have a hardware based random number generator.
+CONFIG_ENTROPY_GENERATOR=y
+CONFIG_ENTROPY_DEVICE_RANDOM_GENERATOR=y
 
 # Mbed config vars
 CONFIG_MBEDTLS=y
