--- a/samples/authentication/serial/auth_server/dtls.prj.conf
+++ b/samples/authentication/serial/auth_server/dtls.prj.conf
@@ -19,9 +19,9 @@ CONFIG_LOG_BACKEND_RTT=y
 CONFIG_LOG_BACKEND_UART=n
 CONFIG_LOG_PRINTK=y
 
-# For production products, should use a real hardware
-# random number generator.
-CONFIG_TEST_RANDOM_GENERATOR=y
+# The SOC must have a hardware based random number generator.
+CONFIG_ENTROPY_GENERATOR=y
+CONFIG_ENTROPY_DEVICE_RANDOM_GENERATOR=y
 
 # Mbed config'CONFIG_MBEDTLS=y
 CONFIG_MBEDTLS=y
