--- a/dts/arm/st/f7/stm32f7.dtsi
+++ b/dts/arm/st/f7/stm32f7.dtsi
@@ -675,6 +675,7 @@
 		sdmmc1: sdmmc@40012c00 {
 			compatible = "st,stm32-sdmmc";
 			reg = <0x40012c00 0x400>;
+			interrupts = <49 0>;
 			clocks = <&rcc STM32_CLOCK_BUS_APB2 0x00000800>;
 			status = "disabled";
 			label = "SDMMC_1";
