--- a/dts/arm/st/f7/stm32f723.dtsi
+++ b/dts/arm/st/f7/stm32f723.dtsi
@@ -35,6 +35,7 @@
 		sdmmc2: sdmmc@40011c00 {
 			compatible = "st,stm32-sdmmc";
 			reg = <0x40011c00 0x400>;
+			interrupts = <103 0>;
 			clocks = <&rcc STM32_CLOCK_BUS_APB2 0x00000080>;
 			status = "disabled";
 			label = "SDMMC_2";
