--- a/dts/arm/st/l4/stm32l471.dtsi
+++ b/dts/arm/st/l4/stm32l471.dtsi
@@ -202,6 +202,7 @@
 		sdmmc1: sdmmc@40012800 {
 			compatible = "st,stm32-sdmmc";
 			reg = <0x40012800 0x400>;
+			interrupts = <49 0>;
 			clocks = <&rcc STM32_CLOCK_BUS_APB2 0x00000400>;
 			status = "disabled";
 			label = "SDMMC_1";
