auth: Added CONFIG_ENTROPY_HAS_DRIVER to test cases.
- Fixes problem with test case not compling.

Signed-off-by: Dean Gereaux <deang@goldenbits.com>

--- a/tests/lib/authentication/testcase.yaml
+++ b/tests/lib/authentication/testcase.yaml
@@ -1,4 +1,5 @@
 tests:
   authentication.auth:
     tags: authentication
-    platform_allow: qemu_cortex_m3 qemu_x86
+    filter: CONFIG_ENTROPY_HAS_DRIVER
+    platform_allow: nrf52840dk_nrf52840
