auth: Fixed problem with running unit test
- Added back sys_rand_get() for CI tests.  This should not be used for
  production code, but needed for CI tests.
- Updated serial sample YAML files to used ci.prf.conf file for
  CI purposes.

Signed-off-by: Dean Gereaux <deang@goldenbits.com>

--- a/tests/lib/authentication/testcase.yaml
+++ b/tests/lib/authentication/testcase.yaml
@@ -1,5 +1,4 @@
 tests:
   authentication.auth:
     tags: authentication
-    filter: CONFIG_ENTROPY_HAS_DRIVER
-    platform_allow: nrf52840dk_nrf52840
+    platform_allow: qemu_cortex_m3 qemu_x86
