--- a/tests/lib/authentication/prj.conf
+++ b/tests/lib/authentication/prj.conf
@@ -10,3 +10,5 @@ CONFIG_AUTH_LOG_LEVEL=3
 CONFIG_AUTH_CHALLENGE_RESPONSE=y
 CONFIG_UART_INTERRUPT_DRIVEN=y
 
+# For CI testing only
+CONFIG_TEST_RANDOM_GENERATOR=y
