--- a/.github/workflows/compliance.yml
+++ b/.github/workflows/compliance.yml
@@ -49,7 +49,7 @@ jobs:
         # debug
         ls -la
         git log  --pretty=oneline | head -n 10
-        ./scripts/ci/check_compliance.py -m Codeowners -m Devicetree -m Gitlint -m Identity -m Nits -m pylint -m checkpatch -m Kconfig -c origin/${BASE_REF}..
+        ./scripts/ci/check_compliance.py -m Codeowners -m Devicetree -m Gitlint -m Identity -m Nits -m pylint -m checkpatch -m KconfigBasic -c origin/${BASE_REF}..
 
     - name: upload-results
       uses: actions/upload-artifact@master
@@ -59,7 +59,10 @@ jobs:
         path: compliance.xml
 
     - name: check-warns
+      env:
+        BASE_REF: ${{ github.base_ref }}
       run: |
+        git log --oneline --first-parent origin/${BASE_REF}..HEAD | grep -E -v "\[nrf (mergeup|fromlist|toup|noup|temphack|fromtree)\]" && { echo 'Sauce tag missing'; exit 1; }
         if [[ ! -s "compliance.xml" ]]; then
           exit 1;
         fi
