--- a/samples/boards/nrf/system_off/prj.conf
+++ b/samples/boards/nrf/system_off/prj.conf
@@ -3,3 +3,5 @@ CONFIG_PM=y
 CONFIG_PM_STATE_LOCK=y
 CONFIG_PM_DEVICE=y
 CONFIG_GPIO=y
+# Optional select RAM retention (nRF52 only)
+#CONFIG_APP_RETENTION=y
