settings: add support for eeprom storage
This adds the possibility to the settings subsystem to use eeprom
storage. On the eeprom each name-value (id-value) entry is represented
as a record containing:
------------------------------------------
| reclen | idmaxidx | id  | data | crc16 |
------------------------------------------
with:
        reclen: record length: (uint16_t)
        idmaxidx: length of id - 1: (uint8_t)
        id: id or name
        data: data or value
        crc16: calculated over id + data: (uint16_t)

These records are stored one after the other. Records are deleted by
making the crc16 invalid. When there is no more place to write a new
record a data compression routine is called to remove all deleted
records from eeprom storage.

The proposed storage allows to specify a limited region of an eeprom as
storage. The default however is to use the full eeprom0 area for
storage.

Signed-off-by: Laczen JMS <laczenjms@gmail.com>

--- a/subsys/settings/Kconfig
+++ b/subsys/settings/Kconfig
@@ -72,6 +72,13 @@ config SETTINGS_NONE
 	bool "NONE"
 	help
 	  No storage back-end.
+
+config SETTINGS_EEPROM
+	bool "EEPROM storage support"
+	depends on EEPROM
+	help
+	  Enables EEPROM storage support
+
 endchoice
 
 config SETTINGS_FCB_NUM_AREAS
