arch: aarch64: Compile with -fPIC
Under some circumstances (for example when having a SRAM base address
very high in memory) the compilation fails with:

  relocation truncated to fit: R_AARCH64_ADR_PREL_PG_HI21 against symbol

One reasonable fix is to compile the code using '-fPIC' and at the same
time reintroduce the discarded PLT/GOT sections.

Signed-off-by: Carlo Caione <ccaione@baylibre.com>

--- a/arch/arm/CMakeLists.txt
+++ b/arch/arm/CMakeLists.txt
@@ -2,6 +2,7 @@
 
 if(CONFIG_ARM64)
   set_property(GLOBAL PROPERTY PROPERTY_OUTPUT_FORMAT elf64-littleaarch64)
+  zephyr_compile_options(-fPIC)
 
   add_subdirectory(core/aarch64)
 else()
