boards: fix dts for nrf5340 and nrf9160
move kmu under flash_controller and power under clock
move sram0_s and sram0_ns under sram_image

Signed-off-by: Laczen JMS <laczenjms@gmail.com>

--- a/boards/arm/nrf5340dk_nrf5340/nrf5340_cpuapp_common.dts
+++ b/boards/arm/nrf5340dk_nrf5340/nrf5340_cpuapp_common.dts
@@ -244,14 +244,16 @@ arduino_spi: &spi4 {
 
 		sram0_image: image@20000000 {
 			/* Zephyr image(s) memory */
-		};
+			#address-cells = <1>;
+			#size-cells = <1>;
+			ranges;
+			sram0_s: image_s@20000000 {
+				/* Secure image memory */
+			};
 
-		sram0_s: image_s@20000000 {
-			/* Secure image memory */
-		};
-
-		sram0_ns: image_ns@20040000 {
-			/* Non-Secure image memory */
+			sram0_ns: image_ns@20040000 {
+				/* Non-Secure image memory */
+			};
 		};
 	};
 };
