auth: Removed non-secure random generator, added stub func for CI tests
- Removed sys_rand_get(), must use secure sys_csrand_get()
- Added stub function, z_impl_sys_csrand_get() in test code.
  This enables unit testing without test environment having
  a secure random source.
- Requring samples to be build with nrf52840dk_nrf52840 board.
  Updated sample.yaml files

Signed-off-by: Dean Gereaux <deang@goldenbits.com>

--- a/samples/authentication/bluetooth/peripheral_auth/sample.yaml
+++ b/samples/authentication/bluetooth/peripheral_auth/sample.yaml
@@ -3,6 +3,7 @@ sample:
   name: Auth Peripheral
 tests:
   sample.peripheral_auth:
+    build_only: true
     harness: bluetooth
-    platform_allow: qemu_x86
+    platform_allow: nrf52840dk_nrf52840
     tags: bluetooth authentication
