--- a/samples/authentication/serial/auth_server/sample.yaml
+++ b/samples/authentication/serial/auth_server/sample.yaml
@@ -3,7 +3,7 @@ sample:
   name: Auth Server Serial
 tests:
   sample.auth_server_serial:
+    build_only: true
     harness: bluetooth
-    platform_allow:  qemu_x86
+    platform_allow: nrf52840dk_nrf52840
     tags: authentication
-    extra_args: CONF_FILE=ci.prj.conf
