--- a/samples/subsys/shell/fs/prj.conf
+++ b/samples/subsys/shell/fs/prj.conf
@@ -1,4 +1,3 @@
-CONFIG_FLASH=y
 
 CONFIG_LOG=y
 #CONFIG_FS_LOG_LEVEL_DBG=y
@@ -11,7 +10,8 @@ CONFIG_SHELL_LOG_LEVEL_INF=y
 CONFIG_FILE_SYSTEM=y
 CONFIG_FILE_SYSTEM_SHELL=y
 
-
-CONFIG_FILE_SYSTEM_LITTLEFS=y
-CONFIG_FLASH_MAP=y
-CONFIG_FLASH_PAGE_LAYOUT=y
+# Settings for Flash based LittleFS
+#CONFIG_FILE_SYSTEM_LITTLEFS=y
+#CONFIG_FLASH=y
+#CONFIG_FLASH_MAP=y
+#CONFIG_FLASH_PAGE_LAYOUT=y
