--- a/kernel/Kconfig
+++ b/kernel/Kconfig
@@ -420,6 +420,12 @@ config ATOMIC_OPERATIONS_C
 	  do not have support for atomic operations in their instruction
 	  set, or haven't been implemented yet during bring-up, and also
 	  the compiler does not have support for the atomic __sync_* builtins.
+
+config ATOMIC_OPERATIONS_BUILTIN_SYNC
+	bool
+	help
+	  Use the __sync compiler builtin functions for atomic operations.
+
 endmenu
 
 menu "Timer API Options"
