nrf5x_bsim: Add and choose SOC_COMPATIBLE_BSIM
Add to the SOC_COMPATIBLE options a common option to choose
compatibility with a simulated BabbleSim target. Also choose
this option for the simulated targets nrf52_bsim and nrf53_cpunet_bsim.

Signed-off-by: Aurora Sletnes Bjørlo <aurora.sletnes@nordicsemi.no>

--- a/soc/Kconfig
+++ b/soc/Kconfig
@@ -36,6 +36,9 @@ config SOC_COMPATIBLE_NRF53X_CPUNET
 config SOC_COMPATIBLE_NRF5340_CPUNET
 	bool
 
+config SOC_COMPATIBLE_BSIM
+	bool
+
 #
 # SOC_*_LD: SoC specific Linker script additions
 #
