--- a/drivers/i2c/Kconfig
+++ b/drivers/i2c/Kconfig
@@ -80,18 +80,21 @@ config I2C_SAM_TWI
 config I2C_MCUX
 	bool "MCUX I2C driver"
 	depends on HAS_MCUX
+	imply MCUX_I2C
 	help
 	  Enable the mcux I2C driver.
 
 config I2C_MCUX_FLEXCOMM
 	bool "MCUX FLEXCOMM I2C driver"
 	depends on HAS_MCUX_FLEXCOMM
+	imply MCUX_FLEXCOMM_I2C
 	help
 	  Enable the mcux flexcomm i2c driver.
 
 config I2C_MCUX_LPI2C
 	bool "MCUX LPI2C driver"
 	depends on HAS_MCUX_LPI2C && CLOCK_CONTROL
+	imply MCUX_LPI2C
 	help
 	  Enable the mcux LPI2C driver.
 
