modules: Introduce hal-nxp-mcux-sdk
Introduces the new GitHub-based distribution of the MCUXpresso SDK as a
module in the west manifest. This new distribution provides the same
bare metal drivers as those downloaded from mcuxpresso.nxp.com and
imported into the hal_nxp module, however in this distribution they are
organized in a different directory structure that doesn't duplicate each
driver for every device. It can be integrated as-is into Zephyr without
the reorganization done in the hal_nxp module, and will therefore
simplify future updates of the SDK into Zephyr.

Currently the west manifest points to an NXP-hosted GitHub repo, but
will be updated once we have a Zephyr-hosted fork available.

Signed-off-by: Maureen Helm <maureen.helm@nxp.com>

--- a/west.yml
+++ b/west.yml
@@ -21,6 +21,8 @@ manifest:
   remotes:
     - name: upstream
       url-base: https://github.com/zephyrproject-rtos
+    - name: nxpmicro
+      url-base: https://github.com/nxpmicro
 
   #
   # Please add items below based on alphabetical order
@@ -105,6 +107,10 @@ manifest:
     - name: hal_nxp
       revision: pull/78/head
       path: modules/hal/nxp
+    - name: mcux-sdk
+      remote: nxpmicro
+      revision: pull/6/head
+      path: modules/hal/nxp-mcux-sdk
     - name: open-amp
       revision: de1b85a13032a2de1d8b6695ae5f800b613e739d
       path: modules/lib/open-amp
