--- a/dts/arm/st/f1/stm32f1.dtsi
+++ b/dts/arm/st/f1/stm32f1.dtsi
@@ -58,6 +58,13 @@
 			label = "STM32_CLK_RCC";
 		};
 
+		exti: interrupt-controller@40010400 {
+			compatible = "st,stm32-exti";
+			interrupt-controller;
+			#interrupt-cells = <1>;
+			reg = <0x40010400 0x400>;
+		};
+
 		pinctrl: pin-controller@40010800 {
 			compatible = "st,stm32f1-pinctrl";
 			#address-cells = <1>;
