--- a/dts/arm/st/g0/stm32g0.dtsi
+++ b/dts/arm/st/g0/stm32g0.dtsi
@@ -59,6 +59,13 @@
 			label = "STM32_CLK_RCC";
 		};
 
+		exti: interrupt-controller@40021800 {
+			compatible = "st,stm32-exti";
+			interrupt-controller;
+			#interrupt-cells = <1>;
+			reg = <0x40021800 0x400>;
+		};
+
 		pinctrl: pin-controller@50000000 {
 			compatible = "st,stm32-pinctrl";
 			#address-cells = <1>;
