--- a/drivers/i2c/Kconfig
+++ b/drivers/i2c/Kconfig
@@ -79,15 +79,17 @@ config I2C_SAM_TWI
 
 config I2C_MCUX
 	bool "MCUX I2C driver"
-	depends on HAS_MCUX
+	depends on HAS_MCUX || HAS_MCUX_SDK_DRIVER_I2C
 	imply MCUX_I2C
+	imply MCUX_SDK_DRIVER_I2C
 	help
 	  Enable the mcux I2C driver.
 
 config I2C_MCUX_FLEXCOMM
 	bool "MCUX FLEXCOMM I2C driver"
-	depends on HAS_MCUX_FLEXCOMM
+	depends on HAS_MCUX_FLEXCOMM || HAS_MCUX_SDK_DRIVER_FLEXCOMM_I2C
 	imply MCUX_FLEXCOMM_I2C
+	imply MCUX_SDK_DRIVER_FLEXCOMM_I2C
 	help
 	  Enable the mcux flexcomm i2c driver.
 
