tests: lib: set integration_platforms
Set integration_platforms on these tests to just native_posix or are
relevant qemu platform.  This should be sufficient to make sure these
tests build and run.

Signed-off-by: Kumar Gala <kumar.gala@linaro.org>

--- a/tests/lib/heap/testcase.yaml
+++ b/tests/lib/heap/testcase.yaml
@@ -9,5 +9,7 @@ tests:
   lib.heap:
     tags: heap
     platform_exclude: m2gl025_miv qemu_xtensa
+    integration_platforms:
+      - native_posix
     filter: not CONFIG_SOC_NSIM
     timeout: 480
