driver: hwinfo: npcx: Add hwinfo driver support in npcx family.
Add hwinfo driver support in npcx family.

Signed-off-by: Mulin Chao <mlchao@nuvoton.com>

--- a/boards/arm/npcx7m6fb_evb/npcx7m6fb_evb_defconfig
+++ b/boards/arm/npcx7m6fb_evb/npcx7m6fb_evb_defconfig
@@ -48,6 +48,9 @@ CONFIG_ESPI=y
 # I2C Driver
 CONFIG_I2C=y
 
+# HWINFO Driver
+CONFIG_HWINFO=y
+
 # Console Driver
 CONFIG_CONSOLE=y
 CONFIG_UART_CONSOLE=y
