--- a/drivers/hwinfo/CMakeLists.txt
+++ b/drivers/hwinfo/CMakeLists.txt
@@ -14,4 +14,5 @@ zephyr_sources_ifdef(CONFIG_HWINFO_SAM0       hwinfo_sam0.c)
 zephyr_sources_ifdef(CONFIG_HWINFO_LITEX      hwinfo_litex.c)
 zephyr_sources_ifdef(CONFIG_HWINFO_PSOC6      hwinfo_psoc6.c)
 zephyr_sources_ifdef(CONFIG_HWINFO_GECKO      hwinfo_gecko.c)
+zephyr_sources_ifdef(CONFIG_HWINFO_NPCX       hwinfo_npcx.c)
 zephyr_sources_ifdef(CONFIG_HWINFO_SHELL hwinfo_shell.c)
