--- a/boards/arm/nucleo_h743zi/nucleo_h743zi.dts
+++ b/boards/arm/nucleo_h743zi/nucleo_h743zi.dts
@@ -58,10 +58,22 @@
 	};
 };
 
+&usart1 {
+    pinctrl-0 = <&usart1_tx_pb6 &usart1_rx_pb7>;
+    current-speed = <115200>;
+    status = "okay";
+};
+
 &usart3 {
 	pinctrl-0 = <&usart3_tx_pd8 &usart3_rx_pd9>;
 	current-speed = <115200>;
 	status = "okay";
+};
+
+&usart6 {
+    pinctrl-0 = <&usart6_tx_pg14 &usart6_rx_pg9>;
+    current-speed = <115200>;
+    status = "okay";
 };
 
 &rtc {
