--- a/samples/scheduler/metairq_dispatch/sample.yaml
+++ b/samples/scheduler/metairq_dispatch/sample.yaml
@@ -3,6 +3,8 @@ sample:
     MetaIRQ thread
   name: MetaIRQ Dispatch
 common:
+    integration_platforms:
+      - mps2_an385
     harness: console
     harness_config:
       type: one_line
