--- a/boards/xtensa/esp32/esp32.dts
+++ b/boards/xtensa/esp32/esp32.dts
@@ -20,6 +20,7 @@
 		zephyr,sram = &sram0;
 		zephyr,console = &uart0;
 		zephyr,shell-uart = &uart0;
+		zephyr,flash = &flash0;
 	};
 };
 
@@ -92,5 +93,9 @@
 };
 
 &trng0 {
+	status = "okay";
+};
+
+&flash0 {
 	status = "okay";
 };
