--- a/dts/arm/nxp/nxp_k6x.dtsi
+++ b/dts/arm/nxp/nxp_k6x.dtsi
@@ -107,7 +107,10 @@
 			compatible = "nxp,kinetis-sim";
 			reg = <0x40047000 0x1060>;
 			label = "SIM";
-
+			core-clk-divider = <1>;
+			bus-clk-divider = <2>;
+			flexbus-clk-divider = <3>;
+			flash-clk-divider = <5>;
 			#clock-cells = <3>;
 		};
 
