boards: arm: ip_k66f: set clk dividers in device tree
Signed-off-by: Mikkel Jakobsen <mikkel.aunsbjerg@prevas.dk>

--- a/boards/arm/ip_k66f/ip_k66f.dts
+++ b/boards/arm/ip_k66f/ip_k66f.dts
@@ -45,6 +45,8 @@
 &sim {
 	pllfll-select = <KINETIS_SIM_PLLFLLSEL_MCGPLLCLK>;
 	er32k-select = <KINETIS_SIM_ER32KSEL_RTC>;
+	bus-clk-divider = <3>;
+	flash-clk-divider = <7>;
 };
 
 &gpioa {
