kernel: sem: add alternative semaphore implementations
The current semaphore implementation works well for singlecore,
and is very straightforward. For SMP however it uses a single
global spinlock, which can end up highly contended, even between
logically unrelated k_sems.

Add an atomics-based semaphore implementation, as well as a
spinlock-per-semaphore implementation (mainly for completeness,
as it was very little effort to add).

There is still some room for optimization here - bounded_increment
and bounded_decrement would be useful, and on ARM can be nontrivially
faster especially under contention than get/check/cas - but
this at least prevents contention at the k_sem level between unrelated
k_sems.

Ditto, currently this only helps with k_sem itself. Several of the
underlying APIs are themselves spinlock-based still, which limits
the effectiveness of this change by itself.

Signed-off-by: James Harris <james.harris@intel.com>

--- a/kernel/Kconfig
+++ b/kernel/Kconfig
@@ -474,6 +474,57 @@ endmenu
 
 menu "Other Kernel Object Options"
 
+choice SEM_IMPL
+	prompt "Semaphore implementation"
+	default SEM_IMPL_SINGLE_SPINLOCK if !SMP
+	default SEM_IMPL_ATOMIC if SMP && !ATOMIC_OPERATIONS_C
+	default SEM_IMPL_SPINLOCK_PER_SEMAPHORE if SMP && ATOMIC_OPERATIONS_C
+	help
+	  The kernel can be built with with several choices for the
+	  semaphore implementation, offering different choices between
+	  binary size, performance, and concurrency.
+
+config SEM_IMPL_SINGLE_SPINLOCK
+	bool "Single spinlock"
+	help
+	  When selected, the semaphore will be implemented
+	  as a single spinlock. This is simple, has a low code size,
+	  and has low memory use per spinlock, but restricts the system
+	  performance to one outstanding semaphore call at a time, and
+	  can result in the global spinlock becoming highly contended
+	  on SMP platforms, especially with a large number of cores.
+	  It is suggested to use this implementation on single-core platforms.
+
+config SEM_IMPL_SPINLOCK_PER_SEMAPHORE
+	bool "Spinlock per semaphore"
+	help
+	  When selected, the semaphore will be implemented
+	  as a spinlock per semaphore. This is simple, but can result in
+	  a relatively large amount of memory use for each spinlock.
+	  This allows multiple concurrent semaphore calls on different
+	  semaphores, but still restricts the system performance to
+	  one outstanding semaphore call on any one particular semaphore.
+	  This option can be used on a single-core platform, but it
+	  generally makes no sense to do so, as there is no advantage
+	  of this option over SEM_IMPL_SINGLE_SPINLOCK.
+
+config SEM_IMPL_ATOMIC
+	bool "Atomics-based semaphore"
+	help
+	  When selected, the semaphore will be implemented
+	  using atomics. On multicore platforms where atomics are cheap,
+	  this can result in significantly better performance and
+	  significantly less contention than a spinlock-based
+	  implementation. This has a fairly high code size, but
+	  relatively low memory use per semaphore.
+	  Note that on some platforms atomics are actually implemented
+	  internally with a spinlock. On such platforms this option
+	  offers no real advantages. Ditto, this option can be
+	  used on a single-core platform, but it generally makes no
+	  sense to do so.
+
+endchoice # SEM_IMPL
+
 config MEM_SLAB_TRACE_MAX_UTILIZATION
 	bool "Enable getting maximum slab utilization"
 	help
