pm support (incl use rtc timer) for stm32l1_disco pm (if proper SoC is chosen: stm32l152xc)
Signed-off-by: Noelle Clement <n.clement@abelsensors.com>

--- a/boards/arm/stm32l1_disco/stm32l1_disco.dts
+++ b/boards/arm/stm32l1_disco/stm32l1_disco.dts
@@ -18,6 +18,15 @@
 		zephyr,sram = &sram0;
 		zephyr,flash = &flash0;
 	};
+	
+	power-states {
+		stop: state0 {
+			compatible = "zephyr,power-state";
+			power-state-name = "suspend-to-idle";
+			substate-id = <0>;
+			min-residency-us = <1000>;
+		};
+	};
 
 	leds {
 		compatible = "gpio-leds";
@@ -86,4 +95,12 @@
 	pinctrl-0 = <&spi2_nss_pb12 &spi2_sck_pb13
 		     &spi2_miso_pb14 &spi2_mosi_pb15>;
 	status = "okay";
+};
+
+&rtc {
+	status = "okay";
+};
+
+&cpu0 {
+	cpu-power-states = <&stop>;
 };
