--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -1175,6 +1175,10 @@ Twister:
     collaborators:
         - chen-png
         - jocelyn-li
+        - galak
+        - PerMac
+        - enjiamai
+        - hakehuang
     files:
         - scripts/twister
         - scripts/pylib/twister/
