dts: arm: move pinmux to dts
Signed-off-by: Nicolai Glud <nicolai.glud@prevas.dk>

--- a/dts/bindings/pinctrl/nxp,kinetis-pinmux.yaml
+++ b/dts/bindings/pinctrl/nxp,kinetis-pinmux.yaml
@@ -11,6 +11,13 @@ properties:
     clocks:
       required: true
 
-pinmux-cells:
-  - pin
-  - function
+child-binding:
+    description: bar
+    properties:
+      pin:
+        required: true
+        type: int
+
+      mux:
+        required: true
+        type: int
