--- a/dts/arm/nxp/nxp_k6x.dtsi
+++ b/dts/arm/nxp/nxp_k6x.dtsi
@@ -6,6 +6,7 @@
 #include <dt-bindings/clock/kinetis_mcg.h>
 #include <dt-bindings/gpio/gpio.h>
 #include <dt-bindings/i2c/i2c.h>
+#include "pinmux_nxp_k6x.h"
 
 / {
 	aliases {
@@ -269,6 +270,9 @@
 			compatible = "nxp,kinetis-pinmux";
 			reg = <0x4004a000 0xd0>;
 			clocks = <&sim KINETIS_SIM_BUS_CLK 0x1038 10>;
+			label = "portb";
+			DT_NXP_PINMUX_DEFINE(uart0_rx, b, 16, K_PORT_MuxAlt3);
+			DT_NXP_PINMUX_DEFINE(uart0_tx, b, 17, K_PORT_MuxAlt3);
 		};
 
 		portc: pinmux@4004b000 {
