--- a/boards/arm/stm32f103_mini/stm32f103_mini.dts
+++ b/boards/arm/stm32f103_mini/stm32f103_mini.dts
@@ -89,6 +89,7 @@
 			spi-max-frequency = <8000000>; /* 8MHz */
 			label = "ST7735";
 			reset-gpios = <&gpiob 12 GPIO_ACTIVE_HIGH>;
+			blk_gpios = <&gpioa 1 (GPIO_ACTIVE_HIGH|GPIO_PULL_UP)>;
 			cmd-data-gpios = <&gpioc 4 GPIO_ACTIVE_HIGH>;
 			width = <129>;
 			height = <160>;
