MAINTAINERS: add west documentation to area
Add west documentation in doc/guides/west/ to the West area.

Signed-off-by: Anas Nashif <anas.nashif@intel.com>

--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -1483,6 +1483,7 @@ West:
     files:
         - scripts/west-commands.yml
         - scripts/west_commands/
+        - doc/guides/west/
     labels:
         - "area: West"
 
