--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -71,6 +71,8 @@ source "drivers/crypto/Kconfig"
 
 source "drivers/display/Kconfig"
 
+source "drivers/stm32mini_dev_button/Kconfig"
+
 source "drivers/led_strip/Kconfig"
 
 source "drivers/wifi/Kconfig"
